# luojia-os-labs

./: Cargo.toml  README.md  justfile
00-template-kernel/: Cargo.toml  justfile
01-batch-kernel/: build.rs  justfile
01-batch-kernel/kernel/: Cargo.toml  build.rs
01-batch-kernel/kernel/src/: app.rs  linker64.ld  main.rs  syscall.rs  trap.rs
01-batch-kernel/src/: main.rs
01-batch-kernel/user/: Cargo.toml  justfile
01-batch-kernel/user/src/: lib.rs  linker64.ld
01a-yield-batch-kern/: justfile
01a-yield-batch-kern/kernel/: .gitignore  Cargo.toml  justfile
01a-yield-batch-kern/kernel/src/: main.rs  (+2 more)
01a-yield-batch-kern/user/: Cargo.toml  justfile
01b-magic-return-kern/: justfile
01b-magic-return-kern/kernel/: Cargo.toml  justfile
01b-magic-return-kern/user/: Cargo.toml
02-multi-program-kern/: justfile
02-multi-program-kern/kernel/: Cargo.toml  justfile
02-multi-program-kern/user/: Cargo.toml  justfile
02a-complex-ctx-kern/: justfile
02a-complex-ctx-kern/kernel/: Cargo.toml  justfile
02a-complex-ctx-kern/user/: Cargo.toml
02b-trap-return-kern/: justfile
02b-trap-return-kern/kernel/: Cargo.toml  justfile
02b-trap-return-kern/user/: Cargo.toml  build.rs  justfile
03-mmu-users/: Cargo.toml  justfile
03-mmu-users/src/: console.rs  lib.rs  linker64.ld
03-virt-addr-kern/: Cargo.toml  build.rs  justfile
03-virt-addr-kern/src/: app.rs  executor.rs  main.rs  mm.rs  trap.rs
03a-va-switch-kern/: .gitignore  Cargo.toml  build.rs  justfile
03a-va-switch-kern/src/: app.rs  executor.rs  loader.rs  main.rs
batch-kernel/: Cargo.toml
(+26 files in other folders)
