[workspace]
members = [
    "00-template-kernel",
    "01-batch-kernel/kernel",
    "01-batch-kernel/user",
    "01a-yield-batch-kern/kernel",
    "01a-yield-batch-kern/user",
    "02-multi-program-kern/kernel",
    "02-multi-program-kern/user",
    "02a-complex-ctx-kern/kernel",
    "02a-complex-ctx-kern/user",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
