[workspace]
members = [
    "00-template-kernel",
    "01-batch-kernel/kernel",
    "01-batch-kernel/user",
    "01a-yield-batch-kern/kernel",
    "01a-yield-batch-kern/user",
    "01b-magic-return-kern/kernel",
    "01b-magic-return-kern/user",
    "02-multi-program-kern/kernel",
    "02-multi-program-kern/user",
    "02a-complex-ctx-kern/kernel",
    "02a-complex-ctx-kern/user",
    "02b-trap-return-kern/kernel",
    "02b-trap-return-kern/user",
    "03-virt-addr-kern",
    "03a-va-switch-kern",
    "03-mmu-users",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
